// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with default props 1`] = `
<span
  className="select"
  id={undefined}
  style={undefined}
>
  <input
    disabled={false}
    name="control"
    type="hidden"
    value=""
  />
  <span
    className="baseline"
  >
    <button
      className="control"
      disabled={false}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      —
    </button>
    <span
      className="arrow"
      onClick={[Function]}
    />
  </span>
  <div
    className="menu bottom"
  />
</span>
`;

exports[`Renders correctly with defined props 1`] = `
<span
  className="select outer"
  id="controls-id"
  style={undefined}
>
  <input
    disabled={true}
    name="control"
    type="hidden"
    value="dd"
  />
  <span
    className="baseline"
  >
    <input
      className="search focused"
      disabled={true}
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      value=""
    />
    <button
      className="control"
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      dd
    </button>
    <span
      className="arrow"
      onClick={[Function]}
    />
  </span>
  <div
    className="menu bottom fixed"
  />
</span>
`;
